hubzone tagline under logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="footer-content">
     <div class="footer-brand-outer-wrapper">
       <div class="footer-brand-inner-wrapper">
-        <a class="footer-brand" href="/"></a>
+        <a href="/"></a>
       </div>
 
       <nav class="footer-nav">
