--- a/_includes/head.html
+++ b/_includes/head.html
@@ -222,6 +222,7 @@
 
   <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="/css/main.css?v=2" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 
   <script src="/js/jquery.slim.min.js"></script>
   <script src="/js/tether.min.js"></script>
