--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,24 +1,29 @@
-<header role="banner">
-  <nav>
-    <div class="navbar-brand-toggler-wrapper">
-      <a class="navbar-brand" href="/"></a>
+<div class="container">
+  <header role="banner">
+    <nav>
+      <div class="navbar-brand-toggler-wrapper">
+        <div class="navbar-brand-wrapper">
+          <a href="/"></a>
+          <p>A HUBZone Company</p>
+        </div>
 
-      <div class="navbar-toggler" role="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false">
-        <span class="sr-only">Toggle Navigation</span>
-        <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
+        <div class="navbar-toggler" role="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false">
+          <span class="sr-only">Toggle Navigation</span>
+          <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
+        </div>
       </div>
-    </div>
 
-    <div id="main-nav">
-      <div class="navbar-nav">
-        <a href="/about/"><span>About</span></a>
-        <a href="/services/"><span>Services</span></a>
-        <a href="/work/"><span>Work</span></a>
-        <a href="/culture/"><span>Culture</span></a>
-        <a href="/join/" aria-current="page"><span>Join Us</span></a>
-        <a href="/blog/"><span>Blog</span></a>
-        <a href="/hire-us/"><span>Hire Us</span></a>
+      <div id="main-nav">
+        <div class="navbar-nav">
+          <a href="/about/"><span>About</span></a>
+          <a href="/services/"><span>Services</span></a>
+          <a href="/work/"><span>Work</span></a>
+          <a href="/culture/"><span>Culture</span></a>
+          <a href="/join/" aria-current="page"><span>Join Us</span></a>
+          <a href="/blog/"><span>Blog</span></a>
+          <a href="/hire-us/"><span>Hire Us</span></a>
+        </div>
       </div>
-    </div>
-  </nav>
-</header>
+    </nav>
+  </header>
+</div>
