--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -213,6 +213,11 @@ $header-display-6: 1.75rem;
 $header-display-7: 1.5rem;
 
 // Main nav
+$nav-brand-width-sm-down: 150px;
+$nav-brand-height-sm-down: 40px;
+$nav-brand-width: 200px;
+$nav-brand-height: 50px;
+
 $nav-link-color: $body-color;
 $nav-link-decoration: none;
 $nav-link-hover-color: $nav-link-color;
