--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -1,37 +1,9 @@
 header[role="banner"] {
-  @extend .container;
-
   nav {
     @extend .navbar;
     @extend .navbar-toggleable-sm;
     @extend .py-3;
-  }
-}
-
-.navbar {
-  font-size: $font-size-small;
-}
-
-.navbar-nav {
-  a {
-    @extend .nav-item;
-    @extend .nav-link;
-    @extend %nav-link-decoration;
-    @extend .px-3;
-    @extend .px-md-down-2;
-
-    &:last-child {
-      @extend .pr-0;
-    }
-
-    &:hover,
-    &:focus,
-    &[aria-current] {
-      span {
-        padding-bottom: 3px;
-        border-bottom: 5px solid $nav-link-border-color;
-      }
-    }
+    font-size: $font-size-small;
   }
 }
 
@@ -40,8 +12,28 @@ header[role="banner"] {
   @extend .justify-content-between;
 }
 
-.navbar-brand {
-  @include logo;
+.navbar-brand-wrapper {
+  a {
+    @include logo;
+  }
+
+  p {
+    @extend .mb-0;
+    padding-left: 3px;
+    color: lighten($gray, 35%);
+    font-family: 'Courgette', cursive;
+    font-size: $font-size-xxx-small;
+    letter-spacing: 1.3px;
+    width: $nav-brand-width-sm-down;
+    white-space: nowrap;
+    overflow: hidden;
+
+    @include media-breakpoint-up(md) {
+      font-size: $font-size-xx-small;
+      letter-spacing: 4px;
+      width: $nav-brand-width;
+    }
+  }
 }
 
 .navbar-toggler {
@@ -74,4 +66,27 @@ header[role="banner"] {
   @extend .collapse;
   @extend .navbar-collapse;
   @extend .justify-content-end;
+}
+
+.navbar-nav {
+  a {
+    @extend .nav-item;
+    @extend .nav-link;
+    @extend %nav-link-decoration;
+    @extend .px-3;
+    @extend .px-md-down-2;
+
+    &:last-child {
+      @extend .pr-0;
+    }
+
+    &:hover,
+    &:focus,
+    &[aria-current] {
+      span {
+        padding-bottom: 3px;
+        border-bottom: 5px solid $nav-link-border-color;
+      }
+    }
+  }
 }
