change text for contribute button

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
     <div class="footer-contribute-cta-wrapper">
       <div class="footer-contribute-cta">
         <a href="{{site.github_issues_url}}" role="button" target="_blank">
-          Contribute to this site
+          Report a bug with the site
         </a>
       </div>
 
