remove logo tagline

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,13 +2,10 @@
   <header role="banner">
     <nav>
       <div class="navbar-brand-toggler-wrapper">
-        <div class="navbar-brand-wrapper">
-          <a href="/"></a>
-          <p>A HUBZone Company</p>
-        </div>
+        <a class="nav-brand" href="/"></a>
 
         <div class="navbar-toggler" role="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false">
-          <span class="sr-only">Toggle Navigation</span>
+        <span class="sr-only">Toggle Navigation</span>
           <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
         </div>
       </div>
