--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="footer-content">
     <div class="footer-brand-outer-wrapper">
       <div class="footer-brand-inner-wrapper">
-        <a href="/"></a>
+        <a href="/">Skylight</a>
       </div>
 
       <nav class="footer-nav">
@@ -26,18 +26,18 @@
 
       <div class="footer-socials">
         <a href="{{site.twitter_url}}" target="_blank">
+          <span class="sr-only">Twitter</span>
           <i class="fa fa-2x fa-twitter" aria-hidden="true" title="Twitter"></i>
-          <span>Twitter</span>
         </a>
 
         <a href="{{site.linkedin_url}}" target="_blank">
+          <span class="sr-only">LinkedIn</span>
           <i class="fa fa-2x fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
-          <span>LinkedIn</span>
         </a>
 
         <a href="{{site.github_repo_url}}" target="_blank">
+          <span class="sr-only">GitHub</span>
           <i class="fa fa-2x fa-github" aria-hidden="true" title="GitHub"></i>
-          <span>GitHub</span>
         </a>
       </div>
     </div>
