--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,24 +2,24 @@
   <header role="banner">
     <nav>
       <div class="navbar-brand-toggler-wrapper">
-        <a class="nav-brand" href="/"></a>
+        <h1><a class="nav-brand" href="/">Skylight</a></h1>
 
         <div class="navbar-toggler" role="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false">
-        <span class="sr-only">Toggle Navigation</span>
+          <span class="sr-only">Toggle Navigation</span>
           <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
         </div>
       </div>
 
       <div id="main-nav">
-        <div class="navbar-nav">
-          <a href="/about/"><span>About</span></a>
-          <a href="/services/"><span>Services</span></a>
-          <a href="/work/"><span>Work</span></a>
-          <a href="/culture/"><span>Culture</span></a>
-          <a href="/join/" aria-current="page"><span>Join Us</span></a>
-          <a href="/blog/"><span>Blog</span></a>
-          <a href="/hire-us/"><span>Hire Us</span></a>
-        </div>
+        <ul class="navbar-nav">
+          <li><a href="/about/"><span>About</span></a></li>
+          <li><a href="/services/"><span>Services</span></a></li>
+          <li><a href="/work/"><span>Work</span></a></li>
+          <li><a href="/culture/"><span>Culture</span></a></li>
+          <li><a href="/join/" aria-current="page"><span>Join Us</span></a></li>
+          <li><a href="/blog/"><span>Blog</span></a></li>
+          <li><a href="/hire-us/"><span>Hire Us</span></a></li>
+        </ul>
       </div>
     </nav>
   </header>
