fixes for html and css validation issues

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -79,7 +79,7 @@
     <meta name="author" content="{{authors}}">
   {% endif %}
 
-  <meta name="date" content="{{date_published}}" scheme="YYYY-MM-DD">
+  <meta name="date" content="{{date_published}}">
   <link rel="image_src" href="{{image}}">
   <link rel="canonical" href="{{canonical_url}}">
 
