--- a/_includes/post.html
+++ b/_includes/post.html
@@ -16,7 +16,7 @@
               <time datetime="{{page.date | date_to_xmlschema}}">
                 {{page.date | date: "%B %-d, %Y" }}
               </time>
-            <span>
+            </span>
           </p>
           <img class="post-feature-img" src="{{page.image}}" alt="{{page.image_description}}">
         </header>
