--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -49,7 +49,7 @@
 .service-area-footer {
   @extend .card-footer;
   @extend .no-border;
-  padding: 0rem 1.25rem;
+  padding: 0 1.25rem;
 }
 
 .minor-service-areas {
