misc scss lint fixes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,16 @@
 <div class="container">
   <header role="banner">
-    <nav>
+    <nav class="navbar">
       <div class="navbar-brand-toggler-wrapper">
-        <h1><a class="nav-brand" href="/">Skylight</a></h1>
+        <h1><a href="/">Skylight</a></h1>
 
-        <div class="navbar-toggler" role="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false">
+        <div class="navbar-toggler" role="button" data-toggle="collapse" data-target="#navbar-nav-collapsible" aria-controls="navbar-nav-collapsible" aria-expanded="false">
           <span class="sr-only">Toggle Navigation</span>
           <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
         </div>
       </div>
 
-      <div id="main-nav">
+      <div id="navbar-nav-collapsible" class="navbar-nav-collapsible">
         <ul class="navbar-nav">
           <li><a href="/about/"><span>About</span></a></li>
           <li><a href="/services/"><span>Services</span></a></li>
