--- a/_sass/pages/_guides.scss
+++ b/_sass/pages/_guides.scss
@@ -6,5 +6,5 @@
   @extend .row;
 }
 
-@include semantic-card("guide");
-@include multi-col-spacing("guide", $mb-size: 4, $mb-md-size: 5);
+@include semantic-card('guide');
+@include multi-col-spacing('guide', $mb-size: 4, $mb-md-size: 5);
