--- a/_sass/pages/_manifest.scss
+++ b/_sass/pages/_manifest.scss
@@ -1,17 +1,17 @@
-@import "common";
-@import "landing";
-@import "about";
-@import "services";
-@import "service_area";
-@import "work";
-@import "project";
-@import "culture";
-@import "policies";
-@import "policy";
-@import "hire_us";
-@import "join";
-@import "alliances";
-@import "guides";
-@import "blog";
-@import "post";
-@import "filter";
+@import 'common';
+@import 'landing';
+@import 'about';
+@import 'services';
+@import 'service_area';
+@import 'work';
+@import 'project';
+@import 'culture';
+@import 'policies';
+@import 'policy';
+@import 'hire_us';
+@import 'join';
+@import 'alliances';
+@import 'guides';
+@import 'blog';
+@import 'post';
+@import 'filter';
