--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -6,75 +6,75 @@
 
 // Font faces
 @font-face {
-  font-family: "Geomanist";
+  font-family: 'Geomanist';
   font-style: normal;
   font-weight: 400;
-  src:  url(/fonts/geomanist-regular-webfont.eot);
-  src:  url(/fonts/geomanist-regular-webfont.eot?#iefix) format("embedded-opentype"),
-        url(/fonts/geomanist-regular-webfont.woff2) format("woff2"),
-        url(/fonts/geomanist-regular-webfont.woff) format("woff"),
-        url(/fonts/geomanist-regular-webfont.ttf) format("truetype"),
-        url(/fonts/geomanist-regular-webfont.svg#geomanist_regularregular) format("svg");
+  src: url(/fonts/geomanist-regular-webfont.eot);
+  src: url(/fonts/geomanist-regular-webfont.eot?#iefix) format('embedded-opentype'),
+       url(/fonts/geomanist-regular-webfont.woff2) format('woff2'),
+       url(/fonts/geomanist-regular-webfont.woff) format('woff'),
+       url(/fonts/geomanist-regular-webfont.ttf) format('truetype'),
+       url(/fonts/geomanist-regular-webfont.svg#geomanist_regularregular) format('svg');
 }
 
 @font-face {
-  font-family: "Geomanist";
+  font-family: 'Geomanist';
   font-style: normal;
   font-weight: 700;
-  src:  url(/fonts/geomanist-medium-webfont.eot);
-  src:  url(/fonts/geomanist-medium-webfont.eot?#iefix) format("embedded-opentype"),
-        url(/fonts/geomanist-medium-webfont.woff2) format("woff2"),
-        url(/fonts/geomanist-medium-webfont.woff) format("woff"),
-        url(/fonts/geomanist-medium-webfont.ttf) format("truetype"),
-        url(/fonts/geomanist-medium-webfont.svg#geomanistmedium) format("svg");
+  src: url(/fonts/geomanist-medium-webfont.eot);
+  src: url(/fonts/geomanist-medium-webfont.eot?#iefix) format('embedded-opentype'),
+       url(/fonts/geomanist-medium-webfont.woff2) format('woff2'),
+       url(/fonts/geomanist-medium-webfont.woff) format('woff'),
+       url(/fonts/geomanist-medium-webfont.ttf) format('truetype'),
+       url(/fonts/geomanist-medium-webfont.svg#geomanistmedium) format('svg');
 }
 
 @font-face {
-  font-family: "Geomanist";
+  font-family: 'Geomanist';
   font-style: normal;
   font-weight: 100;
-  src:  url(/fonts/geomanist-light-webfont.eot);
-  src:  url(/fonts/geomanist-light-webfont.eot?#iefix) format("embedded-opentype"),
-        url(/fonts/geomanist-light-webfont.woff2) format("woff2"),
-        url(/fonts/geomanist-light-webfont.woff) format("woff"),
-        url(/fonts/geomanist-light-webfont.ttf) format("truetype"),
-        url(/fonts/geomanist-light-webfont.svg#geomanistlight) format("svg");
+  src: url(/fonts/geomanist-light-webfont.eot);
+  src: url(/fonts/geomanist-light-webfont.eot?#iefix) format('embedded-opentype'),
+       url(/fonts/geomanist-light-webfont.woff2) format('woff2'),
+       url(/fonts/geomanist-light-webfont.woff) format('woff'),
+       url(/fonts/geomanist-light-webfont.ttf) format('truetype'),
+       url(/fonts/geomanist-light-webfont.svg#geomanistlight) format('svg');
 }
 
 @font-face {
-  font-family: "Geomanist";
+  font-family: 'Geomanist';
   font-style: italic;
   font-weight: 400;
-  src:  url(/fonts/geomanist-regular-italic-webfont.eot);
-  src:  url(/fonts/geomanist-regular-italic-webfont.eot?#iefix) format("embedded-opentype"),
-        url(/fonts/geomanist-regular-italic-webfont.woff2) format("woff2"),
-        url(/fonts/geomanist-regular-italic-webfont.woff) format("woff"),
-        url(/fonts/geomanist-regular-italic-webfont.ttf) format("truetype"),
-        url(/fonts/geomanist-regular-italic-webfont.svg#geomanistregular_italic) format("svg");
+  src: url(/fonts/geomanist-regular-italic-webfont.eot);
+  src: url(/fonts/geomanist-regular-italic-webfont.eot?#iefix) format('embedded-opentype'),
+       url(/fonts/geomanist-regular-italic-webfont.woff2) format('woff2'),
+       url(/fonts/geomanist-regular-italic-webfont.woff) format('woff'),
+       url(/fonts/geomanist-regular-italic-webfont.ttf) format('truetype'),
+       url(/fonts/geomanist-regular-italic-webfont.svg#geomanistregular_italic) format('svg');
 }
 
 @font-face {
-  font-family: "Geomanist";
+  font-family: 'Geomanist';
   font-style: italic;
   font-weight: 700;
-  src:  url(/fonts/geomanist-medium-italic-webfont.eot);
-  src:  url(/fonts/geomanist-medium-italic-webfont.eot?#iefix) format("embedded-opentype"),
-        url(/fonts/geomanist-medium-italic-webfont.woff2) format("woff2"),
-        url(/fonts/geomanist-medium-italic-webfont.woff) format("woff"),
-        url(/fonts/geomanist-medium-italic-webfont.ttf) format("truetype"),
-        url(/fonts/geomanist-medium-italic-webfont.svg#geomanistmedium_italic) format("svg");
+  src: url(/fonts/geomanist-medium-italic-webfont.eot);
+  src: url(/fonts/geomanist-medium-italic-webfont.eot?#iefix) format('embedded-opentype'),
+       url(/fonts/geomanist-medium-italic-webfont.woff2) format('woff2'),
+       url(/fonts/geomanist-medium-italic-webfont.woff) format('woff'),
+       url(/fonts/geomanist-medium-italic-webfont.ttf) format('truetype'),
+       url(/fonts/geomanist-medium-italic-webfont.svg#geomanistmedium_italic) format('svg');
 }
 
 @font-face {
-  font-family: "Geomanist";
+  font-family: 'Geomanist';
   font-style: italic;
   font-weight: 100;
-  src:  url(/fonts/geomanist-light-italic-webfont.eot);
-  src:  url(/fonts/geomanist-light-italic-webfont.eot?#iefix) format("embedded-opentype"),
-        url(/fonts/geomanist-light-italic-webfont.woff2) format("woff2"),
-        url(/fonts/geomanist-light-italic-webfont.woff) format("woff"),
-        url(/fonts/geomanist-light-italic-webfont.ttf) format("truetype"),
-        url(/fonts/geomanist-light-italic-webfont.svg#geomanistlight_italic) format("svg");
+  src: url(/fonts/geomanist-light-italic-webfont.eot);
+  src: url(/fonts/geomanist-light-italic-webfont.eot?#iefix) format('embedded-opentype'),
+       url(/fonts/geomanist-light-italic-webfont.woff2) format('woff2'),
+       url(/fonts/geomanist-light-italic-webfont.woff) format('woff'),
+       url(/fonts/geomanist-light-italic-webfont.ttf) format('truetype'),
+       url(/fonts/geomanist-light-italic-webfont.svg#geomanistlight_italic) format('svg');
 }
 
 // Brand colors
@@ -135,7 +135,7 @@ $link-hover-color: darken($link-color, 15%) !default;
 $link-hover-decoration: none;
 
 // Fonts
-$font-family-sans-serif: "Geomanist", sans-serif;
+$font-family-sans-serif: 'Geomanist', sans-serif;
 
 $font-size-base: $font-size-medium;
 $font-size-lg: $font-size-large;
@@ -195,7 +195,7 @@ $tooltip-bg: $brand-primary;
 //
 
 // Colors
-$brand-primary-muted: rgba($brand-primary, 0.7);
+$brand-primary-muted: rgba($brand-primary, .7);
 
 // Links
 $text-link-color: $brand-primary;
@@ -254,7 +254,7 @@ $btn-form-color: $body-color;
 $btn-form-bg: $white;
 
 // Cards
-$card-box-shadow: 0 1px 9px rgba(0, 0, 0, 0.3);
+$card-box-shadow: 0 1px 9px rgba(0, 0, 0, .3);
 
 // Modals
 $modal-header-color: $brand-primary;
