--- a/_sass/pages/_culture.scss
+++ b/_sass/pages/_culture.scss
@@ -9,8 +9,8 @@
 .value {
   @extend .col-11;
   @extend .col-md-6;
-
   @extend .mb-5;
+
   &:last-child {
     @extend .mb-0;
   }
@@ -32,7 +32,7 @@
 
 .value-block {
   @extend .card-block;
-  padding: 0.5rem 1.25rem 1.25rem 1.25rem;
+  padding: .5rem 1.25rem 1.25rem;
 
   h3 {
     @extend .card-title;
