--- a/_includes/project.html
+++ b/_includes/project.html
@@ -138,11 +138,11 @@
         {% if page.project_url or page.source_code_url %}
           <div class="work-example-ctas">
             {% capture project_link_markup %}
-              <a href="{{page.project_url}}" role="button" target="_blank">See the site</a>
+              <a class="work-example-cta-btn" href="{{page.project_url}}" role="button" target="_blank">See the site</a>
             {% endcapture %}
 
             {% capture source_code_link_markup %}
-              <a href="{{page.source_code_url}}" role="button" target="_blank">Read the code</a>
+              <a class="work-example-cta-btn" href="{{page.source_code_url}}" role="button" target="_blank">Read the code</a>
             {% endcapture %}
 
             {% if page.project_url and page.source_code_url %}
