remove orphan html attribute

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
           <li><a href="/services/"><span>Services</span></a></li>
           <li><a href="/work/"><span>Work</span></a></li>
           <li><a href="/culture/"><span>Culture</span></a></li>
-          <li><a href="/join/" aria-current="page"><span>Join Us</span></a></li>
+          <li><a href="/join/"><span>Join Us</span></a></li>
           <li><a href="/blog/"><span>Blog</span></a></li>
           <li><a href="/hire-us/"><span>Hire Us</span></a></li>
         </ul>
